feat: add zen mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -g mouse on
 
 # set vi-mode
 set-window-option -g mode-keys vi
+set-option -g allow-passthrough on # necessary to vim zen mode
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
