--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ plugin/packer_compiled.lua
 java-debug/
 vscode-java-test/
 lazy-lock.json
+
+.config/gcloud
+.config/github-copilot
+.config/raycast/extensions
+.config/thefuck
+
+.DS_STORE
